Changing boundingBox attribute to DOMRectReadOnly in DetectedFace.idl

The spec[1] says that the boundingBox attribute should be
DOMRectReadOnly instead of DOMRect.

[1] https://wicg.github.io/shape-detection-api/#detectedface

Bug: 852838
Change-Id: I10714b27ea5cf62c27c3b4c550e3e62b9f1936d2
Reviewed-on: https://chromium-review.googlesource.com/1094674
Reviewed-by: Miguel Casas <mcasas@chromium.org>
Commit-Queue: Byoungkwon Ko <codeimpl@gmail.com>
Cr-Commit-Position: refs/heads/master@{#567477}
Former-commit-id: ae31c11b4ae032f0bb1e972b0530acaef95c9c16