third_party/blink/renderer/modules/shapedetection/face_detector.cc
@@ -89,8 +89,9 @@ void FaceDetector::OnDetectFaces(
     }
 
     detected_faces.push_back(DetectedFace::Create(
-        DOMRect::Create(face->bounding_box.x, face->bounding_box.y,
-                        face->bounding_box.width, face->bounding_box.height),
+        DOMRectReadOnly::Create(face->bounding_box.x, face->bounding_box.y,
+                                face->bounding_box.width,
+                                face->bounding_box.height),
         landmarks));
   }
 
